@@ -56,7 +56,7 @@ http://www.fsarchiver.org/forums/viewforum.php?f=17
 .PP
 .B fsarchiver [
 .I options
-.B ] probe simple | detailed
+.B ] probe [detailed]
 
 .SH COMMANDS
 .TP
